# carrier

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  ENDPOINT_NAMING.txt  ENDPOINT_VERSIONS.txt  LEARNINGS.md  Makefile  README.md  binrelease.sh  build.rs  carrier.bash  init.sh  rustfmt.toml  wireshark.lua  zz.toml
.github/workflows/: ci.yml
broker/: Cargo.toml
broker/src/: main.rs
build-core/: Cargo.toml
build-core/src/: lib.rs
ci/: ci.sh
cli/: Cargo.toml  HACKING.md  build.rs  gen.sh  go.mod  go.sum  main.go
cli/conduit/: api.go  conduit.go  db.go  main.go
cli/conduit/static/: index.html
cli/conduit/static/css/: app.css  theme.min.css
cli/conduit/static/js/: theme.min.js
cli/conduit/views/: layout.html  network.html  vault.html
cli/conduit/views/layouts/: master.html
cli/proto/: axiom.proto
cli/protos/: carrier.broker.v1.pb.go  carrier.certificate.v1.pb.go  carrier.config.v1.pb.go  carrier.discovery.v1.pb.go  carrier.sysinfo.v1.pb.go  genesis.v1.pb.go
cli/src/: axons.rs  broker.rs  config.go  forward.rs  framed.rs  genesis.go  ik.go  main.go  main.rs  mosh.rs  names.go  network.go  setup.rs  sft.go  sft.rs  shell.go  shell.rs  shell3.go  stream.go  stubs.c  system.go  system_stats.rs  vault.go
core/: Cargo.toml  Makefile  build.rs  snapshot.sh  zz.toml
core/modules/base32/: zz.toml
core/modules/base32/src/: lib.zz  main.zz
core/modules/carrier_sft/src/: main.zz  sft.zz
core/modules/esp32/: zz.toml
core/modules/esp32/src/: lib.zz
core/modules/fs/src/: lib.zz  native.h
core/modules/hpack/src/: decoder.zz  encoder.zz  lib.zz
core/modules/hpack/tests/: print.zz
core/modules/io/src/: lib.zz  select.zz  unix.zz
core/modules/madpack/: example.csv  zz.toml
core/modules/madpack/src/: lib.zz  main
core/modules/madpack/tests/: decode.zz
core/modules/netio/src/: lib.zz  tcp.zz  udp.zz  unix.zz
core/modules/netio/tests/: parse.zz
core/modules/protonerf/: .gitignore  Cargo.toml  zz.toml
core/modules/protonerf/src/: lib.zz  main.rs  main.zz  proto.pest
core/modules/sysinfo/: zz.toml
core/modules/sysinfo/modules/: madpack
core/modules/sysinfo/src/: lib.zz  main.zz
core/proto/: broker.proto  carrier.broker.v1.proto  carrier.discovery.v1.proto  carrier.header.v1.proto  certificate.proto  genesis.v1.proto
core/src/: bootstrap.zz  certificate.rs  channel.zz  cmd_common.zz  cmd_config.zz  cmd_config_auth_add.zz  cmd_config_auth_list.zz  cmd_config_net.zz  cmd_publish.zz  cmd_shell.zz  cmd_stream.zz  cmd_subscribe.zz  cmd_vault.zz  config.zz  connect.zz  crc8.zz  curve25519.zz  dns.rs  endpoint.h  endpoint.zz  esp32.zz  headers.rs  identity.rs  identity.zz  index.js  initiator.zz  lib.rs  lib.zz  main.zz  nodejs.zz  noise.rs  noise.zz  noise_inner.zz  noise_outer.zz  openwrt.zz  packet.rs  peering.zz  pq.zz  preshared.zz  proto.zz  (+25 more)
core/src/publisher/: android.rs  authorization.rs  openwrt.rs  tcp.rs
core/tests/: identity.zz  noise.zz  pq.zz  sha256.zz
examples/c/: Makefile  demo  main.c
examples/python/: build.sh  main.py  setup.py
go/: README.md  async.go  bootstrap.go  c1.c  c2.c  c3.c  carrier.go  carrier_go.h  cb.go  cbridges.go  channel.go  conduit.go  connect.go  endpoint.go  error.go  go.mod  go.sum  headers.go  identity.go  madpack.go  nettrace.go  noise.go  preshared.go  recovery.go  revision.go  snapshot-core.sh  stream.go  subscriber.go  vault.go
go/test/: main.go
go2/: channel.go  frames.go  go.mod  go.sum  headers.go  main.go  stream.go  vault.go
go2/carrier/: bootstrap.go  channel.go  frames.go  identity.go  noise.go
go2/hpack/: encode.go
go2/test/: main.go
lib/: Cargo.toml  build.rs
lib/proto/: axiom.proto  broker.proto  certificate.proto
lib/src/: certificate.rs  channel.rs  cli.rs  clock.rs  config.rs  connect.rs  dns.rs  endpoint.rs  identity.rs  keystore.rs  lib.rs  listener.rs  local_addrs.rs  noise.rs  packet.rs  ptrmap.rs  publisher.rs  recovery.rs  replay.rs  shadow.rs  stream.rs  subscriber.rs  transport.rs
modules/carrier_sft/: zz.toml
modules/fs/: zz.toml
modules/fs/src/: lib.zz  native.h
modules/hpack/: zz.toml
modules/hpack/src/: decoder.zz  encoder.zz  main.zz
modules/hpack/tests/: decode_integer.zz  print.zz
modules/io/: zz.toml
modules/io/src/: unix.zz
modules/netio/: zz.toml
modules/netio/src/: os.h  tcp.zz  udp.zz  unix.zz
modules/protonerf/: zz.toml
modules/protonerf/src/: lib.zz  main.rs  main.zz  proto.pest
modules/protonerf/tests/: varint.zz  varint.zz_
modules/sysinfo/: zz.toml
modules/sysinfo/modules/: protonerf
ox/: Cargo.toml  build.rs
ox/proto/: broker.proto
ox/src/: broker.rs  dns.rs  endpoint.rs  identity.rs  lib.rs  noise.rs  packet.rs  recovery.rs  shadow.rs  stream.rs  transport.rs  xlog.rs
proto/: broker.proto  carrier.broker.v1.proto  carrier.certificate.v1.proto  carrier.config.v1.proto  carrier.discovery.v1.proto  carrier.sysinfo.v1.proto  genesis.v1.proto  sysinfo.proto
rust/: Cargo.toml  build.rs
rust/src/: certificate.rs  config.rs  headers.rs  identity.rs  lib.rs  madpack.rs  noise.rs  packet.rs  revision.rs  stream.rs
spec/: 0x.md  Makefile  bib.bib  ieee-with-url.csl
src/: base58.c  bootstrap.zz  carrier.bash  certificate.rs  channel.rs  channel.zz  cipher.zz  cli.rs  clock.rs  clock.zz  cmd_common.zz  cmd_config.zz  cmd_config_auth_add.zz  cmd_config_auth_list.zz  cmd_config_net.zz  cmd_identity.zz  cmd_perf.zz  cmd_publish.zz  cmd_stream.zz  cmd_subscribe.zz  cmd_vault.zz  conduit.rs  config.rs  config.zz  connect.zz  crc8.zz  delegated_identity.rs  dns.rs  easy.rs  endpoint.rs  endpoint.zz  error.rs  esp.h  esp32.zz  hacl_star.rs  headers.rs  identity.rs  identity.zz  identity_kit.zz  initiator.zz  (+43 more)
src/publisher/: android.rs  openwrt.rs  sft.rs  shell.rs  sysinfo.rs  tcp.rs  trace.rs
tests/: cipher.zz  hkdf.zz  hmac.zz  identity.zz  noise.zz  packets.rs  pq.zz  sha256.zz
web/: Cargo.toml
web/proto/: axiom.proto
web/src/: endpoint.rs  lib.rs  logger.rs
web/www/: index.html  index.js  package-lock.json  package.json
wsx/: Cargo.toml
wsx/src/: main.rs
(+3 files in other folders)
