[package]
name        = "carrier"
version     = "0.10.0"
authors     = ["Arvid E. Picciani <arvid@devguard.io>"]
license     = "MIT"
description = "carrier is a generic secure message system for IoT"
homepage    = "https://devguard.io"


[features]
default = ["conduit"]
openwrt = ["serde_json"]
conduit = ["gcmap"]
uefi    = ["smbios", "cluproccmdline"]


[dependencies]
bs58                = "0.2.2"
byteorder           = "1.3.1"
clear_on_drop       = "0.2.3"
crc8                = "0.1.1"
ed25519-dalek       = "1.0.0-pre.1"
#log                 = { version = "0.4.6", features = ["release_max_level_debug"] }
log                 = { version = "0.4.6"}
sha2                = "0.8.0"
subtle              = "2.0.0"
x25519-dalek        = { version = "0.5.2", default-features = false, features = ["std", "u64_backend"] }
rand                = "0.6.5"
prost               = "0.5.0"
prost-derive        = "0.5.0"
bytes               = "0.4.12"
hpack               = "0.3.0"

osaka               = "0.2.10"
osaka-dns           = "0.2.11"

mtdparts            = "0.2.0"
mio                 = "0.6.16"
mio-extras          = "2.0.5"
dirs                = "1.0.5"
toml                = "0.5.0"
serde               = "1.0.90"
serde_derive        = "1.0.90"

#conduit
gcmap               = {version = "0.1.4", optional = true}

#main
# TODO remove from lib dependencies somehow
# https://github.com/rust-lang/cargo/issues/1982

which               = "2.0.1"


tinylogger          = "0.1.0"


axon                = "0.2.0"
clap                = "2.33.0"
num_cpus            = "1.10.0"
wait-timeout        = "0.2.0"
pbr                 = "1.0.1"

#pty
nix                 = "0.13.0"
libc                = "0.2.51"

#openwrt
serde_json          = {version = "1.0", optional = true}

# x86
smbios              = {version = "0.1.7", optional = true}
cluproccmdline      = {version = "0.1.5", optional = true}

[target.'cfg(target_arch = "x86_64")'.dependencies]
env_logger          = {version = "0.6.2", default-features = false, features = ["termcolor", "atty", "humantime"]}

[dependencies.snow]
version             = "0.5.2"
default-features    = false
features            = ["hacl-star-resolver"]


[dev-dependencies]
proptest = "0.9.2"


[lib]
name = "carrier"
path = "src/lib.rs"

[[bin]]
name = "carrier"
path = "src/main.rs"

[build-dependencies]
prost-build = "0.5.0"
rand        = "0.6.5"

[profile.release]
lto = true
opt-level = "z"
panic = 'abort'
incremental = false
