[package]
name        = "carrier"
version     = "0.13.0"
authors     = ["Arvid E. Picciani <arvid@devguard.io>"]
license     = "MIT"
description = "carrier is a generic secure message system for IoT"
homepage    = "https://devguard.io"
repository  = "https://github.com/devguardio/carrier"


[features]
default = []
openwrt = []
uefi    = ["smbios", "cluproccmdline"]

[dependencies]
libc                = "0.2.51"
clap                = "2.33.0"

prost               = "0.5.0"
prost-derive        = "0.5.0"
bytes               = "0.4.12"

pbr                 = "1.0.1"
env_logger          = {version = "0.6.2", default-features = false, features = ["termcolor", "atty", "humantime"]}






#uefi
smbios              = {version = "0.1.7", optional = true}
cluproccmdline      = {version = "0.1.5", optional = true}



#
##get rid of these
#mtdparts            = "0.2.0"
#mio                 = "0.6.16"
#mio-extras          = "2.0.5"
#dirs                = "1.0.5"
#toml                = "0.5.0"
#serde               = "1.0.90"
#serde_derive        = "1.0.90"
#
#
##works
#byteorder           = "1.3.1"
#clear_on_drop       = "0.2.3"
##log                 = { version = "0.4.6", features = ["release_max_level_debug"] }
#log                 = { version = "0.4.6"}
#subtle              = "2.0.0"
#rand                = "0.6.5"
#
#
#
#
##conduit
#gcmap               = {version = "0.1.4", optional = true}
#
##main
## TODO remove from lib dependencies somehow
## https://github.com/rust-lang/cargo/issues/1982
#
#which               = "2.0.1"
#
#
#tinylogger          = "0.1.0"
#
#axon                = "0.3.0"
#num_cpus            = "1.10.0"
#wait-timeout        = "0.2.0"
#tempfile            = "3.1"
#
##pty
#nix                 = "0.15.0"
#
##openwrt
#serde_json          = {version = "1.0", optional = true}
#
## x86
#
#

[lib]
name = "carrier"
path = "src/lib.rs"

[[bin]]
name = "carrier"
path = "src/main.rs"

[build-dependencies]
prost-build = "0.5.0"
rand        = "0.6.5"
clap        = "2.33.0"
env_logger  = {version = "0.6.2" }

