[package]
name    = "carrier-cli"
version = "0.2.0"
authors = ["Arvid E. Picciani <arvid@devguard.io>"]
license = "MIT"
description = "carrier is a generic secure message system for IoT"
homepage = "https://devguard.io"

[dependencies]
carrier             = {path = "../lib", version="0.2.0"}
clap                = "2.32.0"
env_logger          = "0.5.12"
failure             = "0.1.2"
futures             = "0.1"
lazy_static         = "1.1.0"
log                 = "0.4.3"
prost               = "0.4.0"
rand                = "0.5"
tokio               = "0.1.7"
tokio-codec         = "0.1.0"
tokio-file-unix     = "0.5.1"
url                 = "1.7.1"

[[bin]]
name = "carrier"
path = "src/main.rs"
