[package]
name    = "carrier-cli"
version = "0.2.0"
authors = ["Arvid E. Picciani <arvid@devguard.io>"]
license = "MIT"
description = "carrier is a generic secure message system for IoT"
homepage = "https://devguard.io"


[dependencies]
carrier             = {path = "../lib", version="0.2.0"}
bytes               = "0.4.9"
failure             = "0.1.2"
futures             = "0.1"
log                 = "0.4.3"
prost               = "0.4.0"
prost-derive        = "0.4.0"
rand                = "0.5"
tokio               = "0.1.7"
tokio-process       = "0.2.2"
hpack               = "0.3.0"
systemstat          = "0.1.3"

[build-dependencies]
carrier-build = {path = "../build", version = "0.2.0"}

[dependencies.clap]
version = "2.32.0"
default-features = false

[dependencies.env_logger]
version = "0.5.12"
default-features = false

[[bin]]
name = "carrier"
path = "src/main.rs"
