[package]
name    = "carrier-cli"
version = "0.4.0"
authors = ["Arvid E. Picciani <arvid@devguard.io>"]
license = "MIT"
description = "carrier is a generic secure message system for IoT"
homepage = "https://devguard.io"


[dependencies]
carrier             = {path = "../lib", version="0.2.0"}
bytes               = "0.4.9"
failure             = "0.1.2"
futures             = "0.1"
log                 = "0.4.3"
rand                = "0.5"
tokio               = "0.1.7"
tokio-pty-process   = {git = "https://github.com/aep/stund.git"}
tokio-file-unix     = "0.5.1"
passwd              = {git = "https://github.com/aep/passwd-rs.git"}

hpack               = "0.3.0"
systemstat          = {git = "https://github.com/myfreeweb/systemstat.git"}
base64              = "0.9.2"

serde               = "1.0.76"
serde_derive        = "1.0.76"
serde_json          = "1.0.26"
libc                = "0.2"


[dependencies.clap]
version = "2.32.0"
default-features = false

[dependencies.env_logger]
version = "0.5.12"
default-features = false

[[bin]]
name = "carrier"
path = "src/main.rs"

[patch.crates-io]
failure      = {git = "https://github.com/aep/failure.git"}

[build-dependencies]
cc = "1.0"
