[package]
name    = "carrier-core"
version = "0.2.0"
authors = ["Arvid E. Picciani <arvid@devguard.io>"]
license = "MIT"
description = "carrier is a generic secure message system for IoT"
homepage = "https://devguard.io"

[dependencies]
bs58                = "0.2.1"
byteorder           = "1.2.4"
clear_on_drop       = "0.2.3"
crc8                = "0.1.1"
ed25519-dalek       = "0.8.0"
failure             = "0.1.2"
log                 = "0.4.3"
sha2                = "0.7.1"
subtle              = "0.7.0"
x25519-dalek        = {version = "0.3.0", default-features = false, features = ["std", "u64_backend"] }
env_logger          = {version = "0.5.12", default-features = false}
rand                = {git = "https://github.com/rust-random/rand.git"}
prost               = "0.4.0"
prost-derive        = "0.4.0"
bytes               = "0.4.9"
wasm-bindgen        = {optional = true, git = "https://github.com/rustwasm/wasm-bindgen.git" , features= ["nightly"]}
hpack               = "0.3.0"

[dependencies.snow]
version = "0.4.0-alpha2"
#git     = "https://github.com/aep/snow.git"
path    = "../../snow/"
branch  = "wasm"
default-features = false

[features]
default = ["snow/default-resolver"]
web = ["rand/wasm-bindgen", "snow/wasm-resolver", "clear_on_drop/nightly", "wasm-bindgen"]

[build-dependencies]
carrier-build-core = {path = "../build-core"}
