[package]
name    = "carrier"
version = "0.2.0"
authors = ["Arvid E. Picciani <arvid@devguard.io>"]
license = "MIT"
description = "carrier is a generic secure message system for IoT"
homepage = "https://devguard.io"

[dependencies]
bs58                = "0.2.1"
byteorder           = "1.2.4"
bytes               = "0.4.9"
crc8                = "0.1.1"
ed25519-dalek       = "0.8.0"
failure             = "0.1.2"
futures             = "0.1.23"
lazy_static         = "1.1.0"
log                 = "0.4.3"
prost               = "0.4.0"
prost-derive        = "0.4.0"
rand                = "0.5"
sha2                = "0.7.1"
subtle              = "0.7.0"
tokio               = "0.1.7"
x25519-dalek        = { version = "0.3.0", default-features = false, features = ["std", "u64_backend"] }
hpack               = "0.3.0"
serde               = "1.0"
serde_derive        = "1.0"
toml                = "0.4"
trust-dns-resolver  = "0.10.0-alpha.2"
futurize            = "0.5.0"
futurize-derive     = "0.5.0"
gcmap               = "0.1.4"
interfaces2         = "0.0.5"
env_logger          = {version = "0.5.12", default-features = false}
carrier-core        = {path = "../core"}


[build-dependencies]
carrier-build = {path = "../build", version = "0.2.0"}
