[package]
name = "ox"
version = "0.1.0"
authors = ["Arvid E. Picciani <aep@exys.org>"]

[dependencies]
snow                = "0.4.0-alpha1"
failure             = "0.1.2"
byteorder           = "1.2.4"
rand                = "0.5"
subtle              = "0.7.0"
ed25519-dalek       = "0.8.0"
x25519-dalek        = { version = "0.3.0", default-features = false, features = ["std", "u64_backend"] }
bs58                = "0.2.1"
crc8                = "0.1.1"
sha2                = "0.7.1"
clear_on_drop       = "0.2.3"
prost               = "0.4.0"
prost-derive        = "0.4.0"
bytes               = "0.4.9"
log                 = "0.4.3"
env_logger          = "0.5.12"
hex                 = "0.3.2"
tokio               = "0.1.7"
futures             = "0.1.23"
lazy_static         = "1.1.0"


[build-dependencies]
prost-build = "0.4.0"

